crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_block_comment.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"/* find all */ MATCH (n) RETURN n\")"
---
/* find all */
MATCH (n)
RETURN n
