crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_fmt_off_on.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"// cypher-fmt: off\\nmatch(n)return n\\n// cypher-fmt: on\\nMATCH (m) RETURN m\")"
---
// cypher-fmt: off
match(n)return n
// cypher-fmt: on
MATCH (m)
RETURN m
