crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_keyword_lower_match_return.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "format_with(\"MATCH (n) RETURN n\", &opts).unwrap()"
---
match (n)
return n
