crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_keyword_lower_where.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "format_with(\"MATCH (n) WHERE n.age > 21 RETURN n\", &opts).unwrap()"
---
match (n)
where n.age > 21
return n
