crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_keyword_preserve_mixed.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "format_with(\"Match (n) Return n\", &opts).unwrap()"
---
Match (n)
Return n
