crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_leading_line_comment_not_glued_to_previous_clause.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: out
---
MATCH (n)
// comment about the WHERE
WHERE n.active
RETURN n
