crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_malformed_partial_then_valid.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"WHERE MATCH (n) RETURN n\")"
---
WHERE
MATCH (n)
RETURN n
