crates/cyrs-fmt/src/snapshots/cyrs_fmt__tests__snap_match_labeled_node.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n:Person) RETURN n\")"
---
MATCH (n:Person)
RETURN n
